...
      </Pressable>
      <Pressable
        style={styles.button}
        onPress={() => {
          navigation.reset({ index: 0, routes: [{ name: "Home" }] });
        }}
        testID="continueBtn"
      >
        <Text>Continue</Text>
      </Pressable>
    </SafeAreaView>
  );
};
...
