...
            screenWidth > 500
              ? styles.customQuizButtonTablet
              : styles.customQuizButtonMobile
          }
        >
          <Button
            testID="customQuizBtn"
            onPress={() => {
              if (favouriteMovies.length < 3) {
                toast.show({
                  title:
                    "You need at least 3 movies in your favourites list to play a custom quiz",
                  description:
...
